[gd_scene load_steps=6 format=3 uid="uid://wlnv0uajs0gk"]

[ext_resource type="Script" uid="uid://rko5wynj0fn6" path="res://scenes/Data/DataQuestion/Label/label.gd" id="1_i3osk"]
[ext_resource type="PackedScene" uid="uid://ceo45d0daaeso" path="res://scenes/Data/DataQuestion/Label/row.tscn" id="2_arwv5"]
[ext_resource type="Texture2D" uid="uid://bp2l8unff6x5l" path="res://graphics/whitesquare.png" id="3_umb2v"]
[ext_resource type="FontFile" uid="uid://cg330vu00gosa" path="res://fonts/Poppins-Regular.ttf" id="3_xkqyu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4bf"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 19
corner_radius_top_right = 19
corner_radius_bottom_right = 19
corner_radius_bottom_left = 19

[node name="Label" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i3osk")
open_row = ExtResource("2_arwv5")

[node name="MainElements" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Canvas" type="TextureRect" parent="MainElements"]
show_behind_parent = true
custom_minimum_size = Vector2(0, 509.25)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_umb2v")
expand_mode = 2

[node name="Markers" type="Control" parent="MainElements/Canvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionButtons" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddLabel" type="Button" parent="ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Label"

[node name="End" type="Button" parent="ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "End Labeling"

[node name="Undo" type="Button" parent="ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Undo"

[node name="GetImage" type="Button" parent="ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fetch Image"

[node name="LabelRows" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Markers" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="Number" type="Label" parent="Markers"]
layout_mode = 0
offset_right = 42.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xkqyu")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Markers/Number"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ee4bf")

[connection signal="pressed" from="ActionButtons/AddLabel" to="." method="_on_add_label_pressed"]
[connection signal="pressed" from="ActionButtons/End" to="." method="_on_end_pressed"]
[connection signal="pressed" from="ActionButtons/End" to="." method="_on_end_drawing_pressed"]
[connection signal="pressed" from="ActionButtons/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="ActionButtons/GetImage" to="." method="_on_get_image_pressed"]
